cmake_minimum_required(VERSION 3.20)

project(mcu_led_service_host_tests C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)

enable_testing()

set(MCU_LED_COMPONENT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../..")
set(MCU_LINK_COMPONENT_DIR "${MCU_LED_COMPONENT_DIR}/../../protocols/mcu_link")

add_executable(mcu_led_service_host_tests
    "${MCU_LED_COMPONENT_DIR}/src/mcu_led_service.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/test_mcu_led_service.c"
)

target_include_directories(mcu_led_service_host_tests PRIVATE
    "${CMAKE_CURRENT_SOURCE_DIR}/include"
    "${MCU_LED_COMPONENT_DIR}/include"
    "${MCU_LINK_COMPONENT_DIR}/include"
)

add_test(NAME mcu_led_service_host_tests COMMAND mcu_led_service_host_tests)
